using UnityEngine;

[RequireComponent(typeof(Collider2D))]
public class ProjectileBlocker : MonoBehaviour, IProjectileBlocker{}
